--- a/dario/HTML/login.html
+++ b/dario/HTML/login.html
@@ -18,7 +18,7 @@
     <p>ERREUR 401 : non-autorise</p>
     <br />
     <p>ERREUR 503 : Service Indiponible</p>
-    <script>
+    <script defer>
       alert("Service Indisponible")
     </script>
   </body>
